<resources>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>
    <string name="send">Send</string>
    <string name="reply">Reply</string>
    <string name="share">SHARE THIS TEXT</string>
    <string name="text">Text Here</string>
    <string name="openWeb">OPEN WEBSITE</string>
    <string name="openLocate">OPEN LOCATION</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate
        wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream
        sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="order_label_text">Order:</string>
    <string name="note_label_text">Note:</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter address</string>
    <string name="phone_label_string">Phone</string>
    <string name="enter_phone_hint">Enter phone</string>
    <string name="enter_note_hint">Enter note</string>
    <string name="choose_delivery_method">Choose a delivery method:</string>
    <string name="same_day_messenger_service">Same day messenger
        service</string>
    <string name="next_day_ground_delivery">Next day ground delivery</string>
    <string name="pick_up">Pick up</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="alert">ALERT</string>
    <string name="alertMessage">Click OK to continue, or Cancel to stop: </string>
    <string name="alertText"> Hello World! Tap to test the alert</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="date">DATE</string>
    <string name="datePicker">Hello World! Choose a date and time</string>
    <string name="time">TIME</string>
    <string name="ok">OK</string>
    <string name="okAction">Pressed OK</string>
    <string name="cancel">Cancel</string>
    <string name="cancelAction">Pressed Cancel</string>
    <string name="tab1">These are the top stories: </string>
    <string name="tab2">Tech news you can use: </string>
    <string name="tab3">Cooking tips: </string>
    <string name="tab_label1">Top Stories</string>
    <string name="tab_label2">Tech News</string>
    <string name="tab_label3">Cooking</string>

    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="initial_count">0</string>
    <string name="minus_button_description">Minus Button</string>
    <string name="plus_button_description">Plus Button</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>

    <string name="title1">Cry for a Shadow</string>

    <string name="article1">Many a Beatle fanatic started down the outtake
        road,
        like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.</string>
    <string name="title2">My Bonnie - Ain’t She Sweet</string>
    <string name="article2">At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yes_message">ARTICLE: Like</string>
    <string name="no_message">ARTICLE: Thanks</string>
    <string name="question_article">LIKE THE ARTICLE?</string>
    <string name="question_the_song">LIKE THE SONG?</string>
    <string name="my_rating">My Rating:</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="exception_message">must implement OnFragmentInteractionListener</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recycler_view">RecyclerViewActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dateMessage">Date: %1$d/%2$d/%3$d</string>
    <string name="timeMessage">Time: %1$d:%2$d</string>

    <string name="progress">Awake at last after sleeping for %1$s milliseconds!</string>

    <string name="start_task">Start task</string>
    <string name="start_text">I am ready to start work!</string>
    <string name="napping">Napping</string>

    <string name="instructions">Enter a book name to find out who wrote the book. </string>
    <string name="button_text">Search Books</string>
    <string name="input_hint">Book Title</string>

    <string name="loading">Loading…</string>
    <string name="no_results">"No Results Found"</string>
    <string name="no_search_term">Please enter a search term</string>
    <string name="no_network">Please check your network connection and try again.</string>

    <string name="book_base">https://www.googleapis.com/books/v1/volumes?</string>
    <string name="query_param">q</string>
    <string name="max_result">maxResults</string>
    <string name="printType">printType</string>
    <string name="items">items</string>
    <string name="volumeInfo">volumeInfo</string>
    <string name="title">title</string>
    <string name="authors">authors</string>
    <string name="query">queryString</string>

    <string name="sendCustomBroadcast">Send Custom Broadcast</string>
    <string name="unknown_toast">unknown intent action</string>
    <string name="power_connect">Power connected!</string>
    <string name="power_disconnect">Power disconnected!</string>
    <string name="custom_boardcast">Custom Boardcast Received</string>
    <string name="action_custom">.ACTION_CUSTOM_BROADCAST</string>

    <string name="blue_button">Blue</string>
    <string name="green_button">Green</string>
    <string name="red_button">Red</string>
    <string name="black_button">Black</string>
    <string name="default_count">0</string>
    <string name="count_button">Count</string>
    <string name="reset_button">Reset</string>
    
    <string name="notify">Notify Me!</string>
    <string name="notify_cancel">Cancel Me!</string>
    <string name="notify_update">Update Me!</string>
    <string name="notified_msg">This is your notification text.</string>
    <string name="notified_title">You have been notified!</string>
    <string name="notified_description">Notification from Mascot</string>
    <string name="notified_update">Notification Updated!</string>
    <string name="notified_button_update_notification">Update Notification</string>
    <string name="mascot_notifition">Mascot Notification</string>
</resources>
